# ProTalk_backend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  ssh-test.yml
app/: main.py  settings.py
app/api/: dependencies.py  main.py  router.py  schemas.py
app/api/routers/: questions.py
app/api/schemas/: user.py
app/orm/: base.py
app/orm/models/: __init__.py  interview.py  knowledge.py  test.py  user.py  vacancy.py
app/services/: auth.py
