[tool.poetry]
name = "protalkapi"
version = "0.1.0"
description = ""
authors = ["Кирил Бессонов <ki48bes2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.3"
werkzeug = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
